syntax = "proto3";
package quasarlabs.quasarnode.qvesting;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/quasarlabs/quasarnode/x/qvesting/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateVestingAccount(MsgCreateVestingAccount) returns (MsgCreateVestingAccountResponse);
}

message MsgCreateVestingAccount {
  option (gogoproto.equal) = true;

  string fromAddress = 1;
  string toAddress = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];

  int64 startTime = 4;
  int64 endTime = 5;
}

message MsgCreateVestingAccountResponse {
}

